@@ -94,7 +94,7 @@ public class AnalyzingInfixLookupFactory extends LookupFactory {
     try {
       return new AnalyzingInfixSuggester(core.getSolrConfig().luceneMatchVersion, 
                                          FSDirectory.open(new File(indexPath)), indexAnalyzer,
-                                         queryAnalyzer, minPrefixChars);
+                                         queryAnalyzer, minPrefixChars, true);
     } catch (IOException e) {
       throw new RuntimeException();
     }
